[build-system]
requires = ["setuptools>=45", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "ts_atbuilding_vents"
description = "AT dome vent controller for `Vera C. Rubin Observatory <https://lsst.org>`_."
license = { text = "GPL" }
urls = { source_code = "https://github.com/lsst-ts/ts_atbuilding_vents"}
dynamic = ["version"]

[tool.setuptools.packages.find]
where = ["python"]
